fix(apps-docs): fixes overflow and light mode background on landing page

--- a/apps/docs/src/styles/global.css
+++ b/apps/docs/src/styles/global.css
@@ -8,6 +8,7 @@ html:has(#docs-menu-toggle:checked) {
   width: 100%;
 }
 
+html,
 body {
   background: var(--wui-site-background);
 }
